Refactor:初步重构整个项目